-- CreateEnum
CREATE TYPE "PartnerRequestStatus" AS ENUM ('PENDING', 'ACCEPTED', 'REJECTED', 'CANCELLED');

-- CreateEnum
CREATE TYPE "ClinicTaskProgressStatus" AS ENUM ('PENDING', 'COMPLETED', 'ASSISTED');

-- CreateEnum
CREATE TYPE "ReportTaskRole" AS ENUM ('PRIMARY', 'ASSISTANT');

-- CreateEnum
CREATE TYPE "ExamStatus" AS ENUM ('SCHEDULED', 'COMPLETED', 'CANCELLED');

-- AlterTable
ALTER TABLE "AvailabilitySlot" ADD COLUMN     "autoGenerated" BOOLEAN NOT NULL DEFAULT false,
ADD COLUMN     "clinicId" TEXT,
ADD COLUMN     "rotationAssignmentId" TEXT;

-- AlterTable
ALTER TABLE "CaseReport" ADD COLUMN     "clinicId" TEXT,
ADD COLUMN     "partnerDoctorId" TEXT,
ADD COLUMN     "rotationAssignmentId" TEXT;

-- CreateTable
CREATE TABLE "PartnerRequest" (
    "id" TEXT NOT NULL,
    "groupId" TEXT NOT NULL,
    "senderId" TEXT NOT NULL,
    "receiverId" TEXT NOT NULL,
    "status" "PartnerRequestStatus" NOT NULL DEFAULT 'PENDING',
    "note" TEXT,
    "createdAt" TIMESTAMP(3) NOT NULL DEFAULT CURRENT_TIMESTAMP,
    "decidedAt" TIMESTAMP(3),

    CONSTRAINT "PartnerRequest_pkey" PRIMARY KEY ("id")
);

-- CreateTable
CREATE TABLE "PartnerPair" (
    "id" TEXT NOT NULL,
    "groupId" TEXT NOT NULL,
    "doctorOneId" TEXT NOT NULL,
    "doctorTwoId" TEXT NOT NULL,
    "note" TEXT,
    "createdAt" TIMESTAMP(3) NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT "PartnerPair_pkey" PRIMARY KEY ("id")
);

-- CreateTable
CREATE TABLE "Clinic" (
    "id" TEXT NOT NULL,
    "name" TEXT NOT NULL,
    "description" TEXT,
    "active" BOOLEAN NOT NULL DEFAULT true,
    "createdAt" TIMESTAMP(3) NOT NULL DEFAULT CURRENT_TIMESTAMP,
    "updatedAt" TIMESTAMP(3) NOT NULL,

    CONSTRAINT "Clinic_pkey" PRIMARY KEY ("id")
);

-- CreateTable
CREATE TABLE "ShiftTemplate" (
    "id" TEXT NOT NULL,
    "name" TEXT NOT NULL,
    "startsAt" TEXT NOT NULL,
    "endsAt" TEXT NOT NULL,
    "appointmentCapacity" INTEGER NOT NULL DEFAULT 2,
    "active" BOOLEAN NOT NULL DEFAULT true,
    "createdAt" TIMESTAMP(3) NOT NULL DEFAULT CURRENT_TIMESTAMP,
    "updatedAt" TIMESTAMP(3) NOT NULL,

    CONSTRAINT "ShiftTemplate_pkey" PRIMARY KEY ("id")
);

-- CreateTable
CREATE TABLE "RotationPlan" (
    "id" TEXT NOT NULL,
    "label" TEXT NOT NULL,
    "startsOn" TIMESTAMP(3) NOT NULL,
    "endsOn" TIMESTAMP(3) NOT NULL,
    "active" BOOLEAN NOT NULL DEFAULT true,
    "createdById" TEXT,
    "createdAt" TIMESTAMP(3) NOT NULL DEFAULT CURRENT_TIMESTAMP,
    "updatedAt" TIMESTAMP(3) NOT NULL,

    CONSTRAINT "RotationPlan_pkey" PRIMARY KEY ("id")
);

-- CreateTable
CREATE TABLE "ClinicRotationAssignment" (
    "id" TEXT NOT NULL,
    "planId" TEXT NOT NULL,
    "groupId" TEXT NOT NULL,
    "clinicId" TEXT NOT NULL,
    "shiftId" TEXT NOT NULL,
    "assignmentDate" TIMESTAMP(3) NOT NULL,
    "notes" TEXT,
    "createdAt" TIMESTAMP(3) NOT NULL DEFAULT CURRENT_TIMESTAMP,
    "updatedAt" TIMESTAMP(3) NOT NULL,

    CONSTRAINT "ClinicRotationAssignment_pkey" PRIMARY KEY ("id")
);

-- CreateTable
CREATE TABLE "ClinicSupervisorAssignment" (
    "id" TEXT NOT NULL,
    "planId" TEXT NOT NULL,
    "clinicId" TEXT NOT NULL,
    "shiftId" TEXT NOT NULL,
    "assignmentDate" TIMESTAMP(3) NOT NULL,
    "supervisorId" TEXT NOT NULL,
    "notes" TEXT,
    "createdAt" TIMESTAMP(3) NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT "ClinicSupervisorAssignment_pkey" PRIMARY KEY ("id")
);

-- CreateTable
CREATE TABLE "ClinicTask" (
    "id" TEXT NOT NULL,
    "clinicId" TEXT NOT NULL,
    "title" TEXT NOT NULL,
    "description" TEXT,
    "active" BOOLEAN NOT NULL DEFAULT true,
    "createdAt" TIMESTAMP(3) NOT NULL DEFAULT CURRENT_TIMESTAMP,
    "updatedAt" TIMESTAMP(3) NOT NULL,

    CONSTRAINT "ClinicTask_pkey" PRIMARY KEY ("id")
);

-- CreateTable
CREATE TABLE "DoctorClinicTaskProgress" (
    "id" TEXT NOT NULL,
    "doctorId" TEXT NOT NULL,
    "clinicTaskId" TEXT NOT NULL,
    "status" "ClinicTaskProgressStatus" NOT NULL DEFAULT 'PENDING',
    "mark" INTEGER,
    "notes" TEXT,
    "completedAt" TIMESTAMP(3),
    "lastReportId" TEXT,
    "createdAt" TIMESTAMP(3) NOT NULL DEFAULT CURRENT_TIMESTAMP,
    "updatedAt" TIMESTAMP(3) NOT NULL,

    CONSTRAINT "DoctorClinicTaskProgress_pkey" PRIMARY KEY ("id")
);

-- CreateTable
CREATE TABLE "CaseReportTask" (
    "id" TEXT NOT NULL,
    "reportId" TEXT NOT NULL,
    "clinicTaskId" TEXT NOT NULL,
    "role" "ReportTaskRole" NOT NULL DEFAULT 'PRIMARY',

    CONSTRAINT "CaseReportTask_pkey" PRIMARY KEY ("id")
);

-- CreateTable
CREATE TABLE "ClinicExam" (
    "id" TEXT NOT NULL,
    "clinicId" TEXT NOT NULL,
    "shiftId" TEXT,
    "planId" TEXT,
    "studentId" TEXT NOT NULL,
    "supervisorId" TEXT NOT NULL,
    "scheduledAt" TIMESTAMP(3) NOT NULL,
    "title" TEXT NOT NULL,
    "cases" TEXT,
    "status" "ExamStatus" NOT NULL DEFAULT 'SCHEDULED',
    "mark" INTEGER,
    "notes" TEXT,
    "createdAt" TIMESTAMP(3) NOT NULL DEFAULT CURRENT_TIMESTAMP,
    "updatedAt" TIMESTAMP(3) NOT NULL,

    CONSTRAINT "ClinicExam_pkey" PRIMARY KEY ("id")
);

-- CreateIndex
CREATE INDEX "PartnerRequest_groupId_status_idx" ON "PartnerRequest"("groupId", "status");

-- CreateIndex
CREATE INDEX "PartnerRequest_senderId_status_idx" ON "PartnerRequest"("senderId", "status");

-- CreateIndex
CREATE INDEX "PartnerRequest_receiverId_status_idx" ON "PartnerRequest"("receiverId", "status");

-- CreateIndex
CREATE UNIQUE INDEX "PartnerPair_doctorOneId_key" ON "PartnerPair"("doctorOneId");

-- CreateIndex
CREATE UNIQUE INDEX "PartnerPair_doctorTwoId_key" ON "PartnerPair"("doctorTwoId");

-- CreateIndex
CREATE INDEX "PartnerPair_groupId_createdAt_idx" ON "PartnerPair"("groupId", "createdAt");

-- CreateIndex
CREATE UNIQUE INDEX "Clinic_name_key" ON "Clinic"("name");

-- CreateIndex
CREATE UNIQUE INDEX "ShiftTemplate_name_key" ON "ShiftTemplate"("name");

-- CreateIndex
CREATE INDEX "RotationPlan_startsOn_endsOn_active_idx" ON "RotationPlan"("startsOn", "endsOn", "active");

-- CreateIndex
CREATE INDEX "ClinicRotationAssignment_groupId_assignmentDate_idx" ON "ClinicRotationAssignment"("groupId", "assignmentDate");

-- CreateIndex
CREATE INDEX "ClinicRotationAssignment_clinicId_assignmentDate_idx" ON "ClinicRotationAssignment"("clinicId", "assignmentDate");

-- CreateIndex
CREATE UNIQUE INDEX "ClinicRotationAssignment_assignmentDate_shiftId_clinicId_key" ON "ClinicRotationAssignment"("assignmentDate", "shiftId", "clinicId");

-- CreateIndex
CREATE UNIQUE INDEX "ClinicRotationAssignment_assignmentDate_shiftId_groupId_key" ON "ClinicRotationAssignment"("assignmentDate", "shiftId", "groupId");

-- CreateIndex
CREATE INDEX "ClinicSupervisorAssignment_supervisorId_assignmentDate_idx" ON "ClinicSupervisorAssignment"("supervisorId", "assignmentDate");

-- CreateIndex
CREATE INDEX "ClinicSupervisorAssignment_clinicId_assignmentDate_idx" ON "ClinicSupervisorAssignment"("clinicId", "assignmentDate");

-- CreateIndex
CREATE UNIQUE INDEX "ClinicSupervisorAssignment_assignmentDate_shiftId_clinicId__key" ON "ClinicSupervisorAssignment"("assignmentDate", "shiftId", "clinicId", "supervisorId");

-- CreateIndex
CREATE INDEX "ClinicTask_clinicId_active_idx" ON "ClinicTask"("clinicId", "active");

-- CreateIndex
CREATE INDEX "DoctorClinicTaskProgress_clinicTaskId_status_idx" ON "DoctorClinicTaskProgress"("clinicTaskId", "status");

-- CreateIndex
CREATE UNIQUE INDEX "DoctorClinicTaskProgress_doctorId_clinicTaskId_key" ON "DoctorClinicTaskProgress"("doctorId", "clinicTaskId");

-- CreateIndex
CREATE UNIQUE INDEX "CaseReportTask_reportId_clinicTaskId_key" ON "CaseReportTask"("reportId", "clinicTaskId");

-- CreateIndex
CREATE INDEX "ClinicExam_studentId_scheduledAt_idx" ON "ClinicExam"("studentId", "scheduledAt");

-- CreateIndex
CREATE INDEX "ClinicExam_supervisorId_scheduledAt_idx" ON "ClinicExam"("supervisorId", "scheduledAt");

-- CreateIndex
CREATE INDEX "ClinicExam_clinicId_scheduledAt_idx" ON "ClinicExam"("clinicId", "scheduledAt");

-- CreateIndex
CREATE INDEX "AvailabilitySlot_clinicId_startTime_idx" ON "AvailabilitySlot"("clinicId", "startTime");

-- CreateIndex
CREATE INDEX "AvailabilitySlot_rotationAssignmentId_idx" ON "AvailabilitySlot"("rotationAssignmentId");

-- CreateIndex
CREATE INDEX "CaseReport_clinicId_submittedAt_idx" ON "CaseReport"("clinicId", "submittedAt");

-- AddForeignKey
ALTER TABLE "AvailabilitySlot" ADD CONSTRAINT "AvailabilitySlot_clinicId_fkey" FOREIGN KEY ("clinicId") REFERENCES "Clinic"("id") ON DELETE SET NULL ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "AvailabilitySlot" ADD CONSTRAINT "AvailabilitySlot_rotationAssignmentId_fkey" FOREIGN KEY ("rotationAssignmentId") REFERENCES "ClinicRotationAssignment"("id") ON DELETE SET NULL ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "PartnerRequest" ADD CONSTRAINT "PartnerRequest_groupId_fkey" FOREIGN KEY ("groupId") REFERENCES "DoctorGroup"("id") ON DELETE RESTRICT ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "PartnerRequest" ADD CONSTRAINT "PartnerRequest_senderId_fkey" FOREIGN KEY ("senderId") REFERENCES "User"("id") ON DELETE RESTRICT ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "PartnerRequest" ADD CONSTRAINT "PartnerRequest_receiverId_fkey" FOREIGN KEY ("receiverId") REFERENCES "User"("id") ON DELETE RESTRICT ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "PartnerPair" ADD CONSTRAINT "PartnerPair_groupId_fkey" FOREIGN KEY ("groupId") REFERENCES "DoctorGroup"("id") ON DELETE RESTRICT ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "PartnerPair" ADD CONSTRAINT "PartnerPair_doctorOneId_fkey" FOREIGN KEY ("doctorOneId") REFERENCES "User"("id") ON DELETE RESTRICT ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "PartnerPair" ADD CONSTRAINT "PartnerPair_doctorTwoId_fkey" FOREIGN KEY ("doctorTwoId") REFERENCES "User"("id") ON DELETE RESTRICT ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "RotationPlan" ADD CONSTRAINT "RotationPlan_createdById_fkey" FOREIGN KEY ("createdById") REFERENCES "User"("id") ON DELETE SET NULL ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "ClinicRotationAssignment" ADD CONSTRAINT "ClinicRotationAssignment_planId_fkey" FOREIGN KEY ("planId") REFERENCES "RotationPlan"("id") ON DELETE RESTRICT ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "ClinicRotationAssignment" ADD CONSTRAINT "ClinicRotationAssignment_groupId_fkey" FOREIGN KEY ("groupId") REFERENCES "DoctorGroup"("id") ON DELETE RESTRICT ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "ClinicRotationAssignment" ADD CONSTRAINT "ClinicRotationAssignment_clinicId_fkey" FOREIGN KEY ("clinicId") REFERENCES "Clinic"("id") ON DELETE RESTRICT ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "ClinicRotationAssignment" ADD CONSTRAINT "ClinicRotationAssignment_shiftId_fkey" FOREIGN KEY ("shiftId") REFERENCES "ShiftTemplate"("id") ON DELETE RESTRICT ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "ClinicSupervisorAssignment" ADD CONSTRAINT "ClinicSupervisorAssignment_planId_fkey" FOREIGN KEY ("planId") REFERENCES "RotationPlan"("id") ON DELETE RESTRICT ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "ClinicSupervisorAssignment" ADD CONSTRAINT "ClinicSupervisorAssignment_clinicId_fkey" FOREIGN KEY ("clinicId") REFERENCES "Clinic"("id") ON DELETE RESTRICT ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "ClinicSupervisorAssignment" ADD CONSTRAINT "ClinicSupervisorAssignment_shiftId_fkey" FOREIGN KEY ("shiftId") REFERENCES "ShiftTemplate"("id") ON DELETE RESTRICT ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "ClinicSupervisorAssignment" ADD CONSTRAINT "ClinicSupervisorAssignment_supervisorId_fkey" FOREIGN KEY ("supervisorId") REFERENCES "User"("id") ON DELETE RESTRICT ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "ClinicTask" ADD CONSTRAINT "ClinicTask_clinicId_fkey" FOREIGN KEY ("clinicId") REFERENCES "Clinic"("id") ON DELETE RESTRICT ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "DoctorClinicTaskProgress" ADD CONSTRAINT "DoctorClinicTaskProgress_doctorId_fkey" FOREIGN KEY ("doctorId") REFERENCES "User"("id") ON DELETE RESTRICT ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "DoctorClinicTaskProgress" ADD CONSTRAINT "DoctorClinicTaskProgress_clinicTaskId_fkey" FOREIGN KEY ("clinicTaskId") REFERENCES "ClinicTask"("id") ON DELETE RESTRICT ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "DoctorClinicTaskProgress" ADD CONSTRAINT "DoctorClinicTaskProgress_lastReportId_fkey" FOREIGN KEY ("lastReportId") REFERENCES "CaseReport"("id") ON DELETE SET NULL ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "CaseReport" ADD CONSTRAINT "CaseReport_partnerDoctorId_fkey" FOREIGN KEY ("partnerDoctorId") REFERENCES "User"("id") ON DELETE SET NULL ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "CaseReport" ADD CONSTRAINT "CaseReport_clinicId_fkey" FOREIGN KEY ("clinicId") REFERENCES "Clinic"("id") ON DELETE SET NULL ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "CaseReport" ADD CONSTRAINT "CaseReport_rotationAssignmentId_fkey" FOREIGN KEY ("rotationAssignmentId") REFERENCES "ClinicRotationAssignment"("id") ON DELETE SET NULL ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "CaseReportTask" ADD CONSTRAINT "CaseReportTask_reportId_fkey" FOREIGN KEY ("reportId") REFERENCES "CaseReport"("id") ON DELETE RESTRICT ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "CaseReportTask" ADD CONSTRAINT "CaseReportTask_clinicTaskId_fkey" FOREIGN KEY ("clinicTaskId") REFERENCES "ClinicTask"("id") ON DELETE RESTRICT ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "ClinicExam" ADD CONSTRAINT "ClinicExam_clinicId_fkey" FOREIGN KEY ("clinicId") REFERENCES "Clinic"("id") ON DELETE RESTRICT ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "ClinicExam" ADD CONSTRAINT "ClinicExam_shiftId_fkey" FOREIGN KEY ("shiftId") REFERENCES "ShiftTemplate"("id") ON DELETE SET NULL ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "ClinicExam" ADD CONSTRAINT "ClinicExam_planId_fkey" FOREIGN KEY ("planId") REFERENCES "RotationPlan"("id") ON DELETE SET NULL ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "ClinicExam" ADD CONSTRAINT "ClinicExam_studentId_fkey" FOREIGN KEY ("studentId") REFERENCES "User"("id") ON DELETE RESTRICT ON UPDATE CASCADE;

-- AddForeignKey
ALTER TABLE "ClinicExam" ADD CONSTRAINT "ClinicExam_supervisorId_fkey" FOREIGN KEY ("supervisorId") REFERENCES "User"("id") ON DELETE RESTRICT ON UPDATE CASCADE;
