---
title: Figure 3.3 — DentyHub Class Diagram (core domain)
config:
  theme: default
  themeVariables:
    fontFamily: "Cambria, Georgia, serif"
    fontSize: "14px"
    primaryColor: "#E7EEF2"
    primaryTextColor: "#0F172A"
    primaryBorderColor: "#0F172A"
    lineColor: "#334155"
---

classDiagram
direction LR

    %% ============= CORE IDENTITY =============
    class User {
      +String id
      +String username
      +String email
      +String password
      +String name
      +Role role
      +SupervisorStatus supervisorStatus
      +DoctorStatus doctorStatus
      +Boolean blocked
      +String? doctorIdNumber
      +DateTime createdAt
    }

    class Semester {
      +String id
      +String label
      +Int sortOrder
      +DateTime createdAt
    }

    %% ============= CATALOGUE =============
    class Clinic {
      +String id
      +String name
      +String? description
      +Boolean active
    }

    class SemesterClinicCase {
      +String id
      +String title
      +String? description
      +Int requiredCount
      +Boolean active
    }

    class ShiftTemplate {
      +String id
      +String name
      +String startsAt
      +String endsAt
      +Int appointmentCapacity
    }

    %% ============= PLANNING =============
    class RotationPlan {
      +String id
      +String label
      +DateTime startsOn
      +DateTime endsOn
      +Boolean active
    }

    class ClinicRotationAssignment {
      +String id
      +DateTime assignmentDate
      +String? notes
    }

    %% ============= BOOKING CORE =============
    class AvailabilitySlot {
      +String id
      +DateTime startTime
      +DateTime endTime
      +String purpose
      +SlotStatus status
      +Boolean autoGenerated
    }

    class Appointment {
      +String id
      +AppointmentStatus status
      +Boolean reportSubmitted
      +Boolean noShow
      +Boolean cancelledByDoctor
      +Boolean cancelledByPatient
      +DateTime? completedAt
      +String? note
    }

    class CaseReport {
      +String id
      +String title
      +String description
      +Json formData
      +ReportReviewStatus status
      +Int? mark
      +Float? rating
      +String? feedback
      +DateTime submittedAt
      +DateTime? reviewedAt
    }

    %% ============= ACADEMIC PROGRESS =============
    class DoctorClinicCaseProgress {
      +String id
      +ClinicCaseProgressStatus status
      +DateTime? completedAt
      +String? lastReportId
    }

    %% ============= AUDIT + NOTIFICATIONS =============
    class AppointmentEvent {
      +String id
      +PerformanceEventType type
      +DateTime createdAt
    }

    class Notification {
      +String id
      +String message
      +String? type
      +Boolean read
      +DateTime createdAt
    }

    %% ============= ENUMS =============
    class Role {
      <<enumeration>>
      PATIENT
      DOCTOR
      SUPERVISOR
      ADMIN
    }

    class SlotStatus {
      <<enumeration>>
      OPEN
      BOOKED
      PAIR_BLOCKED
      CANCELLED
    }

    class AppointmentStatus {
      <<enumeration>>
      PENDING
      APPROVED
      COMPLETED
      REJECTED
      CANCELLED
    }

    class ReportReviewStatus {
      <<enumeration>>
      SUBMITTED
      NEEDS_EDIT
      REVIEWED
      CASE_REJECTED
    }

    class ClinicCaseProgressStatus {
      <<enumeration>>
      OPEN
      ASSISTED
      COMPLETED
    }

    %% ============= RELATIONSHIPS =============
    User "1" --> "*" Notification : receives
    User "*" --> "1" Semester : enrolled in
    User ..> Role : role

    Clinic "1" --> "*" SemesterClinicCase : offers
    Semester "1" --> "*" SemesterClinicCase : scopes

    RotationPlan "1" --> "*" ClinicRotationAssignment : schedules
    ClinicRotationAssignment "*" --> "1" Clinic : at
    ClinicRotationAssignment "*" --> "1" ShiftTemplate : during

    User "1 doctor" --> "*" AvailabilitySlot : owns
    AvailabilitySlot "*" --> "0..1" Clinic : at
    AvailabilitySlot "*" --> "0..1" ClinicRotationAssignment : derived from
    AvailabilitySlot ..> SlotStatus : status

    AvailabilitySlot "1" --> "0..1" Appointment : reserves
    Appointment "*" --> "1 patient" User : booked by
    Appointment "*" --> "1 doctor" User : assigned to
    Appointment "*" --> "0..1" SemesterClinicCase : for category
    Appointment ..> AppointmentStatus : status

    Appointment "1" --> "0..1" CaseReport : produces
    CaseReport "*" --> "1 doctor" User : submitted by
    CaseReport "*" --> "0..1 supervisor" User : reviewed by
    CaseReport ..> ReportReviewStatus : status

    Appointment "1" --> "*" AppointmentEvent : audit-trailed

    User "1 doctor" --> "*" DoctorClinicCaseProgress : tracks
    DoctorClinicCaseProgress "*" --> "1" SemesterClinicCase : for case
    DoctorClinicCaseProgress ..> ClinicCaseProgressStatus : status
